# tronpuppy

./: .gitignore  Makefile  input.json  mining.circom
forge/: Makefile  README.md  pyproject.toml
forge/artifacts/: Miner.json  TronPuppy.json
forge/script/: Deploy.s.sol  deploy.py  deploy_tron_puppy.py
forge/src/: Miner.sol  TronPuppy.sol  verifier.sol
forge/test/: Genetal.t.sol
src/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
src/src/: App.tsx  main.css  provider.ts  utils.ts  worker.ts
src/src/components/: CopyButton.tsx
src/src/pages/: Home.page.tsx
